--- a/.github/workflows/08-custom-solution.yaml
+++ b/.github/workflows/08-custom-solution.yaml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v4
       
       - name: Install dependencies
-        uses: ./github/actions/install_dependecies
+        uses: ./.github/actions/install_dependecies
 
       - name: Run Playwright tests
         run: npx playwright test
